--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "next": "^6.0.0",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "rxjs": "^6.1.0"
   },
   "scripts": {
     "dev": "next"
